--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,13 @@
       <artifactId>mail</artifactId>
       <version>1.4</version>
     </dependency>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+      </configuration>
+    </plugin>
   </dependencies>
 </project>
